
=== Configuration changes for system administrators in 1.39 ===
* The default serialization method for file meta-data has been changed to JSON.
  You can revert it to PHP by setting the 'useJsonMetadata' property to false in
  $wgLocalFileRepo.
* The DBO_SSL flag in $wgDBservers and $wgLBFactoryConf has been deprecated in
  favour of a boolean "ssl" parameter.
* …

==== New configuration ====
* $wgAutoCreateTempUser – configures automatic user creation on page save.
* $wgCopyUploadAllowOnWikiDomainConfig – Configures if administrators can use
  the MediaWiki:Copyupload-allowed-domains system message to define which
  domains can be used with the upload-by-url tool.
* …

==== Changed configuration ====
* $wgInvalidUsernameCharacters now contains the char '>',
  reserved delimiter for external user names.
* …

==== Removed configuration ====
* $wgMultiContentRevisionSchemaMigrationStage - Migration is over, was
  deprecated since 1.35.
* $wgWikiFarmSiteDetector – experimental setting removed without replacement.
  Use the MW_WIKI_NAME environment variable to specifiy the name of the site
  to load configuration for. Using the WIKI_NAME environment variable for this
  purpose is deprecated.
* $wgParserCacheUseJson - the ParserCache now always uses JSON serialization.
  Reading old non-JSON cache entries is still supported. The setting had been
  deprecated since 1.36.
* $wgAllowJavaUploads - To allow uploads of JAR files, remove application/java
  from $wgMimeTypeExclusions.
* $wgMaxRedirects has been removed. This feature never worked as intended,
  see T296430.
* $wgElementTiming has been removed. This feature was experimental,
  and disabled by default.
* $wgPriorityHints and $wgPriorityHintsRatio have been removed.
  This feature was experimental, and disabled by default.
* $wgActorTableSchemaMigrationStage has been removed. Migration is over.
* In $wgObjectCaches, globalKeyLB and localKeyLB are no longer supported.