@@ -20,7 +20,6 @@
  * @file
  */
 
-use MediaWiki\MainConfigNames;
 use Wikimedia\ParamValidator\ParamValidator;
 
 /**
@@ -57,20 +56,7 @@ class ApiFormatPhp extends ApiFormatBase {
 				// Should have been caught during parameter validation
 				$this->dieDebug( __METHOD__, 'Unknown value for \'formatversion\'' );
 		}
-		$text = serialize( $this->getResult()->getResultData( null, $transforms ) );
-
-		// T68776: OutputHandler::mangleFlashPolicy() avoids a nasty bug in
-		// Flash, but what it does isn't friendly for the API. There's nothing
-		// we can do here that isn't actively broken in some manner, so let's
-		// just be broken in a useful manner.
-		if ( $this->getConfig()->get( MainConfigNames::MangleFlashPolicy ) &&
-			in_array( 'MediaWiki\\OutputHandler::handle', ob_list_handlers(), true ) &&
-			preg_match( '/\<\s*cross-domain-policy(?=\s|\>)/i', $text )
-		) {
-			$this->dieWithError( 'apierror-formatphp', 'internalerror' );
-		}
-
-		$this->printText( $text );
+		$this->printText( serialize( $this->getResult()->getResultData( null, $transforms ) ) );
 	}
 
 	public function getAllowedParams() {
