@@ -99,40 +99,4 @@ class ApiFormatPhpTest extends ApiFormatTestBase {
 		// phpcs:enable
 	}
 
-	public function testCrossDomainMangling() {
-		$config = new HashConfig( [ 'MangleFlashPolicy' => false ] );
-		$context = new RequestContext;
-		$context->setConfig( new MultiConfig( [
-			$config,
-			$context->getConfig(),
-		] ) );
-		$main = new ApiMain( $context );
-		$main->getResult()->addValue( null, null, '< Cross-Domain-Policy >' );
-
-		$printer = $main->createPrinterByName( 'php' );
-		ob_start( 'MediaWiki\\OutputHandler::handle' );
-		$printer->initPrinter();
-		$printer->execute();
-		$printer->closePrinter();
-		$ret = ob_get_clean();
-		$this->assertSame( 'a:1:{i:0;s:23:"< Cross-Domain-Policy >";}', $ret );
-
-		$config->set( 'MangleFlashPolicy', true );
-		$printer = $main->createPrinterByName( 'php' );
-		ob_start( 'MediaWiki\\OutputHandler::handle' );
-		try {
-			$printer->initPrinter();
-			$printer->execute();
-			$printer->closePrinter();
-			ob_end_clean();
-			$this->fail( 'Expected exception not thrown' );
-		} catch ( ApiUsageException $ex ) {
-			ob_end_clean();
-			$this->assertTrue(
-				$ex->getStatusValue()->hasMessage( 'apierror-formatphp' ),
-				'Expected exception'
-			);
-		}
-	}
-
 }
